[metadata]
name = torchmm
author = Christopher J. MacLellan
author-email = maclellan.christopher@gmail.com
summary = A PyTorch implementation of various Hidden Markov Model inference and learning capabilities.
description-file = README.md
description-content-type = text/x-rst; charset=UTF-8
home-page = https://hq-git.soartech.com/chris.maclellan/TorCHmM
project_urls = 
    Source Code = https://hq-git.soartech.com/chris.maclellan/TorCHmM
license = MIT
license_file = LICENSE
classifier =
    Development Status :: 4 - Beta
    Intended Audience :: Science/Research
    Topic :: Scientific/Engineering :: Artificial Intelligence
    License :: OSI Approved :: MIT License
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: Implementation :: PyPy

[files]
package =
    torchmm

[bdist_wheel]
universal=1
